_generated-doc/2.7/config/quarkus-config-group-pkg-native-config-compression.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-config-group-pkg-native-config-compression_configuration]]link:#quarkus-config-group-pkg-native-config-compression_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-config-group-pkg-native-config-compression_quarkus.native.compression.level]]`link:#quarkus-config-group-pkg-native-config-compression_quarkus.native.compression.level[quarkus.native.compression.level]`

[.description]
--
The compression level in ++[++1, 10++]++. 10 means *best* Higher compression level requires more time to compress the executable.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-config-group-pkg-native-config-compression_quarkus.native.compression.additional-args]]`link:#quarkus-config-group-pkg-native-config-compression_quarkus.native.compression.additional-args[quarkus.native.compression.additional-args]`

[.description]
--
Allows passing extra arguments to the UPX command line (like --brute). The arguments are comma-separated. The exhaustive list of parameters can be found in link:https://github.com/upx/upx/blob/devel/doc/upx.pod[https://github.com/upx/upx/blob/devel/doc/upx.pod].
--|list of string 
|

|===