_generated-doc/3.8/config/quarkus-config-group-pkg-native-config-compression.adoc

:summaryTableId: quarkus-config-group-pkg-native-config-compression
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-config-group-pkg-native-config-compression_configuration]]link:#quarkus-config-group-pkg-native-config-compression_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-config-group-pkg-native-config-compression_quarkus-native-compression-level]]`link:#quarkus-config-group-pkg-native-config-compression_quarkus-native-compression-level[quarkus.native.compression.level]`


[.description]
--
The compression level in ++[++1, 10++]++. 10 means _best_.

Higher compression level requires more time to compress the executable.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_COMPRESSION_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_COMPRESSION_LEVEL+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-config-group-pkg-native-config-compression_quarkus-native-compression-additional-args]]`link:#quarkus-config-group-pkg-native-config-compression_quarkus-native-compression-additional-args[quarkus.native.compression.additional-args]`


[.description]
--
Allows passing extra arguments to the UPX command line (like --brute). The arguments are comma-separated. The exhaustive list of parameters can be found in link:https://github.com/upx/upx/blob/devel/doc/upx.pod[https://github.com/upx/upx/blob/devel/doc/upx.pod].

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_COMPRESSION_ADDITIONAL_ARGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_COMPRESSION_ADDITIONAL_ARGS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|

|===